<resources>
    <string name="app_name">BelkaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Belka Space</string>
    <string name="nav_header_subtitle">Простір твоїх ідей!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Налаштування</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="belka_logotype">Belka logotype</string>
    <string name="belka_describing">Режим роботи:\n
        \n
        пн-пт — 14:30 - 22:00\n
        сб — 12:00 - 22:00\n
        нд — вихідний\n
        \n
        Наш чат Telegram: @belka_chat</string>
    <string name="menu_report">Повідомити</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="squirrel_is_watching_you">Squirrel is watching you</string>
    <string name="report_input_hint">Опишіть проблему...</string>
    <string name="report_button_text">Повідомити</string>
    <string name="tea_icon">Tea icon</string>
    <string name="no_tea_left">Закінчився чай</string>
    <string name="no_sugar_left">Закінчився цукор</string>
    <string name="too_noisy">Занадто шумно</string>
    <string name="squirrel_with_laptop">Squirrel with laptop</string>
    <string name="ear">ear</string>
    <string name="human_smile">human smile</string>
    <string-array name="reports_array">
        <item>Закінчився чай</item>
        <item>Закінчився цукор</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>