<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.belkaapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.belkaapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.belkaapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.belkaapp.ui.user.UserFragment"
        android:label="Акаунт"
        tools:layout="@layout/user_fragment" />
    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.example.belkaapp.ui.events.EventsFragment"
        android:label="Заходи"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/suggestFragment"
        android:name="com.example.belkaapp.ui.suggest.SuggestFragment"
        android:label="Запропонувати"
        tools:layout="@layout/fragment_suggest" />
    <fragment
        android:id="@+id/informFragment"
        android:name="com.example.belkaapp.ui.inform.InformFragment"
        android:label="Повідомити"
        tools:layout="@layout/fragment_inform" />
</navigation>